--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,13 @@ install:
   - pipenv install --system
 
 script:
-- nikola build --no-continue --strict
+  - nikola build --no-continue --strict
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: output
+  on:
+    branch: master
