--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-
+Pillow = ">=7.1.0"
 nikola = "*"
 "ghp-import2" = "*"
-pyyaml = "*"
+pyyaml = ">=4.2b1"
 "ws4py" = "*"
 watchdog = "*"
 webassets = "*"
-notebook = "~=5.4.1"
-
+notebook = ">=5.7.8"
+bleach = ">=3.1.4"
 
 [dev-packages]
